--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,6 @@
 {
-    "/js/my.js": "/js/my.js",
-    "/css/my.css": "/css/my.css"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css",
+    "/css/my.css": "/css/my.css",
+    "/js/my.js": "/js/my.js"
 }
