--- a/package.json
+++ b/package.json
@@ -15,15 +15,18 @@
         "cross-env": "^7.0.3",
         "jquery": "^3.2",
         "laravel-mix": "^4.0.7",
+        "less": "^4.1.1",
         "lodash": "^4.17.5",
         "popper.js": "^1.12",
         "resolve-url-loader": "^2.3.1",
-        "sass": "^1.15.2",
+        "sass": "^1.32.12",
         "sass-loader": "^7.1.0",
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
-        "distpicker": "^2.0.7"
+        "distpicker": "^2.0.7",
+        "less-loader": "^5.0.0",
+        "pc-bootstrap4-datetimepicker": "^4.17.51"
     }
 }
