--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     },
     "dependencies": {
         "distpicker": "^2.0.7",
+        "html2canvas": "^1.0.0-rc.7",
         "pc-bootstrap4-datetimepicker": "^4.17.51"
     }
 }
