--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laravel/tinker": "^1.0",
         "maatwebsite/excel": "^3.1",
         "overtrue/laravel-lang": "~3.0",
-        "phpoffice/phpword": "^0.18.1"
+        "phpoffice/phpword": "^0.18.1",
+        "tecnickcom/tcpdf": "^6.4"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
