add: view-create

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -2,7 +2,9 @@
     "/js/app.js": "/js/app.js",
     "/css/less.css": "/css/less.css",
     "/css/scss.css": "/css/scss.css",
-    "/css/my.css": "/css/my.css",
+    "/css/common.css": "/css/common.css",
+    "/css/resume.css": "/css/resume.css",
     "/js/my.js": "/js/my.js",
-    "/css/app.css": "/css/app.css"
+    "/css/app.css": "/css/app.css",
+    "/css/my.css": "/css/my.css"
 }
