--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -4,6 +4,7 @@
     "/css/scss.css": "/css/scss.css",
     "/css/common.css": "/css/common.css",
     "/css/resume.css": "/css/resume.css",
+    "/css/management.css": "/css/management.css",
     "/js/my.js": "/js/my.js",
     "/css/app.css": "/css/app.css",
     "/css/my.css": "/css/my.css"
