--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.1.3",
         "doctrine/dbal": "^3.1",
         "fideloper/proxy": "^4.0",
+        "hhxsv5/laravel-s": "~3.7.0",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
         "maatwebsite/excel": "^3.1",
