--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -6,6 +6,7 @@
     "/css/resume.css": "/css/resume.css",
     "/css/user.css": "/css/user.css",
     "/css/management.css": "/css/management.css",
+    "/css/company.css": "/css/company.css",
     "/js/my.js": "/js/my.js",
     "/css/app.css": "/css/app.css",
     "/css/my.css": "/css/my.css"
