--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "chenhua/laravel5-markdown-editor": "^1.0",
         "doctrine/dbal": "^3.1",
         "fideloper/proxy": "^4.0",
         "hhxsv5/laravel-s": "~3.7.0",
